fix: fix shadow bleed on forms

--- a/packages/cwp-template-aws/template/common/apps/theme/formBuilder/styles/theme.scss
+++ b/packages/cwp-template-aws/template/common/apps/theme/formBuilder/styles/theme.scss
@@ -3,6 +3,7 @@
   padding: 0 5px 5px 5px;
   box-sizing: border-box;
   background-color: var(--webiny-theme-color-surface, #ffffff);
+  --box-shadow: none;
 
   .webiny-fb-form-layout-row,
   .webiny-fb-form-layout-column {
